--- a/client/popup.html
+++ b/client/popup.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Insigth GPT</h1>
+    <h1 class="title">SummarizeIt</h1>
     <div class="root">
       <button class="btn">Analizar</button>
     </div>
+    <footer
+      style="display: flex; justify-content: space-between; padding: 10px 0"
+    >
+      <span>Powered by AI</span>
+      <span
+        >Created by <span class="created-by">Alexander Germoso</span>❤️</span
+      >
+    </footer>
   </body>
   <script src="index.js" type="module"></script>
 </html>
